--- a/Q11stNGLithiumBato.html
+++ b/Q11stNGLithiumBato.html
@@ -1,12 +1,18 @@
 <html>
     <body>
         <script>
-            let age = 14;
-            let maxAge = 85
-            let numPerDay = 6;
-            let totalRequired = (numPerDay*365)*(maxAge-age);;
+            let age = window.prompt("Please type your age: ");
+            let maxAge = window.prompt("What age do you think you'll live to?");
+            let numPerDay = ("Number of snacks you eat a day?");
+            let confirm = window.confirm("Are you sure about everything you inputted?");
+            if (sure){
+                let totalRequired = (numPerDay*365)*(maxAge-age);
             document.write(`You will need ${totalRequired} pieces of the biscuit Tiger to
              last until your ripe old age of ${maxAge}`);
+            }
+            else{
+                window.alert("Run again? Confirm if yes.");
+            }
         </script>
     </body>
 </html>
