--- a/Q11stNGLithiumBato.html
+++ b/Q11stNGLithiumBato.html
@@ -1,9 +1,9 @@
 <html>
     <body>
         <script>
-            let age = window.prompt("Please type your age: ");
-            let maxAge = window.prompt("What age do you think you'll live to?");
-            let numPerDay = ("Number of snacks you eat a day?");
+            let age = window.prompt("Please type your age: ", 14);
+            let maxAge = window.prompt("What age do you think you'll live to?", 99);
+            let numPerDay = ("Number of snacks you eat a day?", 6);
             let confirm = window.confirm("Are you sure about everything you inputted?");
             if (sure){
                 let totalRequired = (numPerDay*365)*(maxAge-age);
