--- a/Q11stNGLithiumBato.html
+++ b/Q11stNGLithiumBato.html
@@ -5,8 +5,8 @@
             let maxAge = window.prompt("What age do you think you'll live to?", 99);
             let numPerDay = ("Number of snacks you eat a day?", 6);
             let confirm = window.confirm("Are you sure about everything you inputted?");
-            if (sure){
-                let totalRequired = (numPerDay*365)*(maxAge-age);
+            if (confirm){
+                let totalRequired = (Number(numPerDay)*365)*(Number(maxAge)-Number(age));
             document.write(`You will need ${totalRequired} pieces of the biscuit Tiger to
              last until your ripe old age of ${maxAge}`);
             }
