--- a/Q11stNGLithiumBato.html
+++ b/Q11stNGLithiumBato.html
@@ -1,7 +1,15 @@
 <html>
     <body>
+        <h1>Snack Calculator</h1>
+        <label> Please put your current age <input id="age" /></label><br/>
+        <label> Please put your age you want to live to <input id="maxAge" /></label><br/>
+        <label> Please put the number of snacks you eat <input id="numPerDay" /></label><br/>
+        <p> Result : 
+            <span id="totalRequired"></span>
+        </p>
+        <button>Confirm Numbers</button>
         <script>
-            let age = window.prompt("Please type your age: ", 14);
+            /*let age = window.prompt("Please type your age: ", 14);
             let maxAge = window.prompt("What age do you think you'll live to?", 99);
             let numPerDay = window.prompt("Number of snacks you eat a day?", 6);
             let confirm = window.confirm("Are you sure about everything you inputted?");
@@ -12,7 +20,7 @@
             }
             else{
                 window.alert("Run again? Confirm if yes.");
-            }
+            }*/
         </script>
     </body>
 </html>
