--- a/Q11stNGLithiumBato.html
+++ b/Q11stNGLithiumBato.html
@@ -4,23 +4,25 @@
         <label> Please put your current age <input id="age" /></label><br/>
         <label> Please put your age you want to live to <input id="maxAge" /></label><br/>
         <label> Please put the number of snacks you eat <input id="numPerDay" /></label><br/>
+
+        <button onclick="calculateSnacks()">Calculate Snacks</button>
         <p> Result : 
             <span id="totalRequired"></span>
         </p>
-        <button>Confirm Numbers</button>
         <script>
-            /*let age = window.prompt("Please type your age: ", 14);
-            let maxAge = window.prompt("What age do you think you'll live to?", 99);
-            let numPerDay = window.prompt("Number of snacks you eat a day?", 6);
-            let confirm = window.confirm("Are you sure about everything you inputted?");
-            if (confirm){
-                let totalRequired = (Number(numPerDay)*365)*(Number(maxAge)-Number(age));
-            document.write(`You will need ${totalRequired} pieces of the biscuit Tiger to
-             last until your ripe old age of ${maxAge}`);
+            function calculateSnacks(){
+                let age = document.getElementById("age").value;
+                let maxAge = document.getElementById("maxAge").value;
+                let numPerDay = document.getElementById("numPerDay").value;
+                let confirm = window.confirm("Are you sure about everything you inputted?");
+                if (confirm){
+                    let totalRequired = (Number(numPerDay)*365)*(Number(maxAge)-Number(age));
+                    document.getElementById("totalRequired").innerHTML = `<b>You need ${totalRequired} of snacks to survive until the ripe old age of ${maxAge}</b>`;
+                }
+                else{
+                    window.alert("Run again? Confirm if yes.");
+                }
             }
-            else{
-                window.alert("Run again? Confirm if yes.");
-            }*/
         </script>
     </body>
 </html>
