--- a/Q11stNGLithiumBato.html
+++ b/Q11stNGLithiumBato.html
@@ -17,7 +17,7 @@
                 let confirm = window.confirm("Are you sure about everything you inputted?");
                 if (confirm){
                     let totalRequired = (Number(numPerDay)*365)*(Number(maxAge)-Number(age));
-                    document.getElementById("totalRequired").innerHTML = `<b>You need ${totalRequired} of snacks to survive until the ripe old age of ${maxAge}</b>`;
+                    document.getElementById("totalRequired").innerHTML = `<b>You need ${totalRequired} snacks to survive until the ripe old age of ${maxAge}</b>`;
                 }
                 else{
                     window.alert("Run again? Confirm if yes.");
