--- a/public/Q12GLithiumBato.html
+++ b/public/Q12GLithiumBato.html
@@ -28,6 +28,11 @@
          
         }
     </script>
-
+    <p> References:
+        <br/>
+        W3Schools.com. (n.d.). https://www.w3schools.com/jsref/jsref_tofixed.asp 
+        <br/>
+        Bato, I. (2025). Q11stNGLithiumBato v3. Philippine Science High School. 
+    </p>
 </body>
 </html>
