--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <li><a href="./public/Q1_1stGraded.html"> First Exercise </a> </li>
       <li><a href="./Q11stNGLithiumBato.html"> Q1 1st Non-Graded</a> </li> 
       <li><a href="./public/Q12GLithiumBato.html"> Second Graded Exercise </a> </li> 
+      <li><a href="./public/Q13GLithiumBato.html"> Third Graded Exercise </a> </li>
     </ul>
    </nav>
   </section>
