--- a/public/Q13GLithiumBato.html
+++ b/public/Q13GLithiumBato.html
@@ -16,23 +16,24 @@
         <script>
             var dNumber = Math.floor(Math.random() * 100) + 1; // generates a number from 1  to 100 when the page loads
             let answer = document.getElementById("guess").value;
-            let resultOf;
             function checkIt(){
-                if (Number(answer) == dNumber){
+                let resultOf;
+                if (parseInt(answer) == dNumber){
                     resultOf = "You are correct!";
                 }
-                else if (Number(answer) < dNumber){
+                else if (parseInt(answer) < dNumber){
                     resultOf = "Higher";
                 }else{
                     resultOf = "Lower";
                 }
-                document.getElementById("result").innerHTML = `<b> ${resultOf} </b>`;
+                document.getElementById("result").innerHTML = `<b>resultOf<b/>`;
             }
         </script>
     <p> References: <br/>
         W3Schools.com. (n.d.-b). https://www.w3schools.com/js/js_if_else.asp <br/>
-        Bato, I. (2025). Q11stNGLithiumBato.html. Philippine Science High School <br/>
-        W3Schools.com. (n.d.-c). https://www.w3schools.com/jsref/met_document_getelementbyid.asp
+        Bato, I. (2025). Q11stNGLithiumBato.html. Philippine Science High School. <br/>
+        W3Schools.com. (n.d.-c). https://www.w3schools.com/jsref/met_document_getelementbyid.asp <br/>
+        Bato, I. (2025). Q12GLithiumBato.html. Philippine Science High School.
     </p>
     </body>
 
